package Vista;

public class Pruebasview {
    public static void main(String[] args) {

    }
}
