@startuml

title __VISTA's Class Diagram__\n

  namespace  {
    namespace ista {
      class Vista.BarChart {
          - categoryAxis_ : String
          + BarChart()
          + BarChart()
          + BarChart()
          + createChart()
          + createDataset()
          + updateDataset()
      }
    }
  }
  

  namespace  {
    namespace ista {
      abstract class Vista.Chart {
          # chart_ : JFreeChart
          # dataMap_ : Map<String, Double>
          # title_ : String
          # xAxisName_ : String
          # yAxisName_ : String
          + Chart()
          + Chart()
          + Chart()
          + DrawChart()
          {abstract} + createChart()
          {abstract} + createDataset()
          + getDataMap_()
          + reArrangeYAxisRange()
          + setDataMap_()
          {abstract} + updateDataset()
          # createChart()
          # reduceSizeArray()
      }
    }
  }
  

  namespace  {
    namespace ista {
      abstract class Vista.LaLigaView {
          # matchList : List<IMatch>
          # playersNameList : List<String>
          # positionsNumPlayersMap : Map<POSITIONS, Integer>
          # standingsMap : Map<String, Long>
          # teamStatsMap : Map<RESULT, Long>
          # teamToShow : String
          # teamsList : List<String>
          {abstract} + display()
          + setController()
          + setDataMatches()
          + setDataPlayerPositionInTeam()
          + setDataPlayers()
          + setLaLigaStandings()
          + setTeam()
          + setTeamStats()
          + setTeamsList()
          # LaLigaView()
      }
    }
  }
  

  namespace  {
    namespace ista {
      class Vista.LineChart {
          - categoryAxis_ : String
          + LineChart()
          + LineChart()
          + LineChart()
          + createChart()
          + createDataset()
          + updateDataset()
      }
    }
  }
  

  namespace  {
    namespace ista {
      class Vista.PieChart {
          + PieChart()
          + PieChart()
          + PieChart()
          + createChart()
          + createDataset()
          + updateDataset()
          # setBg()
      }
    }
  }
  

  namespace  {
    namespace ista {
      class Vista.Pruebasview {
          {static} + main()
      }
    }
  }
  

  namespace  {
    namespace ista {
      class Vista.ViewFacade {
          + ViewFacade()
          + ViewFacade()
          + createView()
          + getVista()
          + updateView()
      }
    }
  }
  

  namespace  {
    namespace ista {
      class Vista.VistaCLI {
          + VistaCLI()
          + display()
      }
    }
  }
  

  namespace  {
    namespace ista {
      class Vista.vistaGrafica1 {
          ~ finalMapBarChart : Map<String, Double>
          ~ finalMapPieChart : Map<String, Double>
          ~ listModel : DefaultListModel
          ~ tableModel : DefaultTableModel
          ~ tableStandingsModel : DefaultTableModel
          - clasificaciónLigaTabla : JTable
          - frame : JFrame
          - getMoreInfoMatchButton : JButton
          - labelLista : JLabel
          - listaNombreJugadores : JList<String>
          - panelCharts : JPanel
          - panelClasificacion : JPanel
          - panelList : JPanel
          - panelListTable : JPanel
          - panelPrincipal : JPanel
          - panelTabla : JPanel
          - partidosResultadosTable : JTable
          - scrollPanelList : JScrollPane
          - scrollPanelTabla : JScrollPane
          - teamSelectorComboBox : JComboBox<String>
          + display()
          + vistaGrafica1()
          - createCharts()
          - createTablaClasificación()
          - displayWindowInfoMatch()
          - repaint()
          - repaintCharts()
          - setComboBoxData()
          - setDatasets()
          - setHead2HeadStandingsTable()
          - setHead2HeadTotalsTable()
          - setList()
          - setRefereesList()
          - setTable()
      }
    }
  }
  

  Vista.BarChart -up-|> Vista.Chart
  Vista.LaLigaView o-- Controlador.LaLigaController : controller
  Vista.LineChart -up-|> Vista.Chart
  Vista.PieChart -up-|> Vista.Chart
  Vista.ViewFacade o-- Modelo.Team : teamToShow
  Vista.ViewFacade o-- Vista.LaLigaView : vista
  Vista.VistaCLI -up-|> Vista.LaLigaView
  Vista.vistaGrafica1 -up-|> Vista.LaLigaView
  Vista.vistaGrafica1 o-- Vista.Chart : barChartNumJugadoresPorPos
  Vista.vistaGrafica1 o-- Vista.Chart : pieChartPartidosGanadosPerdidosEmpatados


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
